Edited border for cards in portfolio in a pseudoclass hover and focus

--- a/index.html
+++ b/index.html
@@ -356,5 +356,10 @@
         </div>
       </div>
     </footer>
+    <button data-modal-open>OPEN</button>
+    <div class="modal is-hidden" data modal>
+      <button data-modal-close>X</button>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
