Added transitions to all hover and focus pseudoclasses

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,14 +61,14 @@
             <li class="portfolio-cards-item">
               <figure>
                 <img
-                  src="./images/portfolio/technotrack.jpg"
-                  alt="Technotrack"
+                  src="./images/portfolio/technocrack.jpg"
+                  alt="Technocrack"
                   width="370"
                   height="294"
                   class="image"
                 />
                 <figcaption class="figcap-sec2-portfolio">
-                  <h3 class="header3-sec-2-portfolio">Technotrack</h3>
+                  <h3 class="header3-sec-2-portfolio">Technocrack</h3>
                   <p class="par-sec-2-portfolio">Strona internetowa</p>
                 </figcaption>
               </figure>
@@ -98,8 +98,8 @@
                   class="image"
                 />
                 <figcaption class="figcap-sec2-portfolio">
-                  <h3 class="header3-sec-2-portfolio">Technotrack</h3>
-                  <p class="par-sec-2-portfolio">Strona internetowa</p>
+                  <h3 class="header3-sec-2-portfolio">Restauracja Seafood</h3>
+                  <p class="par-sec-2-portfolio">Aplikacja</p>
                 </figcaption>
               </figure>
             </li>
