Added labels in sec 3 index.html

--- a/index.html
+++ b/index.html
@@ -103,13 +103,22 @@
           <h2 class="header2-sec-3-index">Czym się zajmujemy</h2>
           <ul class="list-style-none sec-3-parent">
             <li class="sec-3-item">
-              <img src="./images/index/service-1.jpg" alt="osoba pisząca na klawiaturze" width="370" height="294" />
+              <div class="what-we-do-index">
+                <img src="./images/index/service-1.jpg" alt="osoba pisząca na klawiaturze" width="370" height="294" />
+                <p class="label-what-we-do-index">APLIKACJE INTERNETOWE</p>
+              </div>
             </li>
             <li class="sec-3-item">
-              <img src="./images/index/service-2.jpg" alt="osoba korzystająca z telefonu" width="370" height="294" />
+              <div class="what-we-do-index">
+                <img src="./images/index/service-2.jpg" alt="osoba korzystająca z telefonu" width="370" height="294" />
+                <p class="label-what-we-do-index">APLIKACJE MOBILNE</p>
+              </div>
             </li>
             <li class="sec-3-item">
-              <img src="./images/index/service-3.jpg" alt="osoba pracująca na tablecie" width="370" height="294" />
+              <div class="what-we-do-index">
+                <img src="./images/index/service-3.jpg" alt="osoba pracująca na tablecie" width="370" height="294" />
+                <p class="label-what-we-do-index">ROZWIĄZANIA GRAFICZNE</p>
+              </div>
             </li>
           </ul>
         </div>
