--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
         <a href="./index.html" class="logo black"><span class="logo blue">Web</span>Studio</a>
         <nav class="navig">
           <ul class="navigation list-style-none navigation-parent">
-            <li><a href="./index.html">Agencja</a></li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="">Kontakt</a></li>
+            <li><a href="./index.html" class="navigation-link">Agencja</a></li>
+            <li><a href="./portfolio.html" class="navigation-link portfolio">Portfolio</a></li>
+            <li><a href="" class="navigation-link">Kontakt</a></li>
           </ul>
         </nav>
         <ul class="nav-links-parent list-style-none">
