Added overlay to cards in portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,13 +60,23 @@
           <ul class="list-style-none portfolio-cards-parent">
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/technocrack.jpg"
-                  alt="Technocrack"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/technocrack.jpg"
+                    alt="Technocrack"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
+
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Technocrack</h3>
                   <p class="par-sec-2-portfolio">Strona internetowa</p>
@@ -75,13 +85,22 @@
             </li>
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/new-orlean-vs-golden-star.jpg"
-                  alt="Grafika New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/new-orlean-vs-golden-star.jpg"
+                    alt="Grafika New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Grafika New Orlean vs Golden Star</h3>
                   <p class="par-sec-2-portfolio">Dizajn</p>
@@ -90,13 +109,22 @@
             </li>
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/restaurant-seafood.jpg"
-                  alt="Restauracja Seafood"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/restaurant-seafood.jpg"
+                    alt="Restauracja Seafood"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Restauracja Seafood</h3>
                   <p class="par-sec-2-portfolio">Aplikacja</p>
@@ -105,13 +133,22 @@
             </li>
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/project-prime.jpg"
-                  alt="Projekt Prime"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/project-prime.jpg"
+                    alt="Projekt Prime"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Projekt Prime</h3>
                   <p class="par-sec-2-portfolio">Marketing</p>
@@ -120,13 +157,22 @@
             </li>
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/project-boxes.jpg"
-                  alt="Projekt Boxes"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/project-boxes.jpg"
+                    alt="Projekt Boxes"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Projekt Boxes</h3>
                   <p class="par-sec-2-portfolio">Aplikacja</p>
@@ -135,13 +181,22 @@
             </li>
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/inspiration-has-no-borders.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/inspiration-has-no-borders.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Inspiration has no Borders</h3>
                   <p class="par-sec-2-portfolio">Strona internetowa</p>
@@ -150,13 +205,22 @@
             </li>
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/limited-edition.jpg"
-                  alt="Magazyn Limited Edition"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/limited-edition.jpg"
+                    alt="Magazyn Limited Edition"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Magazyn Limited Edition</h3>
                   <p class="par-sec-2-portfolio">Strona internetowa</p>
@@ -165,13 +229,22 @@
             </li>
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/project-lab.jpg"
-                  alt="Projekt LAB"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/project-lab.jpg"
+                    alt="Projekt LAB"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Projekt LAB</h3>
                   <p class="par-sec-2-portfolio">Marketing</p>
@@ -180,13 +253,22 @@
             </li>
             <li class="portfolio-cards-item">
               <figure>
-                <img
-                  src="./images/portfolio/growing-business.jpg"
-                  alt="Growing Business"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="box">
+                  <img
+                    src="./images/portfolio/growing-business.jpg"
+                    alt="Growing Business"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.<br />
+                      Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery
+                      konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="figcap-sec2-portfolio">
                   <h3 class="header3-sec-2-portfolio">Growing Business</h3>
                   <p class="par-sec-2-portfolio">Aplikacja</p>
