--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <section class="sec-1-index">
         <div class="container sec-1-parent">
           <h1 class="title-sec-1-index sec-1-item">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          <button type="button" class="but-sec-1-index sec-1-item">Zamów usługę</button>
+          <button type="button" class="but-sec-1-index sec-1-item modal-open" data-modal-open>Zamów usługę</button>
         </div>
       </section>
       <section class="section sec-2">
@@ -365,9 +365,15 @@
         </div>
       </div>
     </footer>
-    <button data-modal-open>OPEN</button>
-    <div class="modal is-hidden" data modal>
-      <button data-modal-close>X</button>
+    <div>
+      <svg width="140" height="140" fill="black"><use href="./images/icons.svg#close"></use></svg>
+    </div>
+    <div class="backdrop is-hidden" data modal>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
+          <svg width="18" height="18"><use href="./images/icons.svg#close"></use></svg>
+        </button>
+      </div>
     </div>
     <script src="./js/modal.js"></script>
   </body>
