--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg width="18" height="18"><use href="./images/icons.svg#close"></use></svg>
